# tabbycat-api-2

./: .gitignore  pyproject.toml  requirements.txt  schema.yaml  setup.cfg
src/tabbycat_api/: __init__.py  base.py  cache.py  client.py  config.py  exceptions.py  route_model.py
src/tabbycat_api/models/: __init__.py  adjudicator.py  availability.py  ballot.py  break_category.py  break_eligibility.py  breaking_team.py  checkin.py  debate.py  enums.py  feedback.py  feedback_question.py  group.py  institution.py  motion.py  preference.py  preformed_panel.py  root.py  round.py  round_pairing.py  score_criteria.py  speaker.py  speaker_category.py  speaker_eligibility.py  speaker_round_score.py  speaker_standing.py  team.py  team_round_score.py  team_standing.py  tournament.py  user.py  v1root.py  venue.py  venue_category.py  venue_constraints.py
src/tabbycat_flet/: main.py
tests/: test_client.py  test_edit.py
