[project]
name = "tabbycat-api-2"
version = "0.0.1"
description = "A Python API client for Tabbycat"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ino_haan" }]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
]

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
