[project]
name = "tabbycat-api-2"
version = "0.0.1"
description = "A Python API client for Tabbycat"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ino_haan" }]
requires-python = ">=3.13"
dependencies = [
    "cryptography==42.0.5",
    "flet[all]>=0.27.5",
    "google-api-python-client>=2.164.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
]

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]

[tool.flet]
app.module = "main"
app.path = "src/tabbycat_flet"

[dependency-groups]
dev = [
    "coloredlogs>=15.0.1",
]
